# LiveDemo

./: .gitignore
app/: build.gradle
app/src/androidTest/java/cn/leizy/live/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  mylog.h  native-lib.cpp
app/src/main/java/cn/leizy/live/: AudioChannel.kt  ImageUtil.kt  JImageUtil.java  LivePusher.kt  MainActivity.kt  VideoChannel.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/cn/leizy/live/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
